refactor: atualiza adiciona item no orçamento